--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </div>
       </div>
 
-      <form action="theopcoder@gmail.com" class="contact-form">
+      <form action="mailto:theopcoder@gmail.com" class="contact-form">
         <input type="text" class="nameZone" placeholder="Your Full Name">
         <input type="email" class="emailZone" placeholder="Your Email">
         <input type="text" class="subjectZone" placeholder="Subject">
