--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                 <div class="hero-image-container">
                     <!-- SEO: Use descriptive alt text and replace placeholder with a real image. -->
                     <!-- TODO: Replace placeholder. Use a descriptive filename like 'mohammed-habeeb-ullah-tabrez-portfolio.jpg' -->
-                    <img src="./images/2.png" alt="Mohammed Habeeb Ullah Tabrez, Backend Developer">
+                    <img src="./images/Mohammed_Habeeb_Ullah_Tabrez.webp" alt="Mohammed Habeeb Ullah Tabrez, Backend Developer">
                 </div>
             </div>
         </section>
@@ -696,7 +696,7 @@
         <section id="contact">
             <!-- SEO: Use descriptive alt text and replace placeholder with a real image. -->
             <!-- TODO: Replace placeholder. Use a descriptive filename like 'mohammed-habeeb-ullah-tabrez-contact.jpg' -->
-            <img class="contact-image" src="./images/2.png" alt="Contact Mohammed Habeeb Ullah Tabrez">
+            <img class="contact-image" src="./images/Mohammed_Habeeb_Ullah_Tabrez.webp" alt="Contact Mohammed Habeeb Ullah Tabrez">
             <p class="intro" style="margin-bottom: 0;">What's Next?</p>
             <h2>Get In Touch</h2>
             <p>
