--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
     <!-- SEO: Open Graph Meta Tags (for social media sharing, e.g., LinkedIn, Facebook) -->
     <meta property="og:title" content="Mohammed Habeeb Ullah Tabrez | Backend Developer">
     <meta property="og:description" content="Experienced Backend Developer specializing in Node.js, .NET, SQL Server, and building scalable systems.">
-    <meta property="og:image" content="https://theopcoder.in/hero-image.jpg"> <!-- TODO: Replace with a URL to your actual hero image -->
-    <meta property="og:url" content="https://theopcoder.in/">
+    <meta property="og:image" content="https://theopcoder.in/images/Mohammed_Habeeb_Ullah_Tabrez.webp">
     <meta property="og:type" content="website">
 
     <!-- SEO: Twitter Card Meta Tags (for Twitter sharing) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Mohammed Habeeb Ullah Tabrez | Backend Developer">
     <meta name="twitter:description" content="Experienced Backend Developer specializing in Node.js, .NET, Go, and building scalable systems.">
-    <meta name="twitter:image" content="https://theopcoder.in/hero-image.jpg"> <!-- TODO: Replace with a URL to your actual hero image -->
+    <meta name="twitter:image" content="https://theopcoder.in/images/Mohammed_Habeeb_Ullah_Tabrez.webp">
     
     <style>
         /* --- General Styles & Resets --- */
@@ -545,7 +544,7 @@
         },
         "knowsAbout": ["Backend Development", "Node.js", ".NET", "Go", "Python", "REST APIs", "Microservices", "SQL Server", "MongoDB", "AWS"],
         "url": "https://theopcoder.in/",
-        "image": "https://theopcoder.in/hero-image.jpg",
+        "image": "https://theopcoder.in/images/Mohammed_Habeeb_Ullah_Tabrez.webp",
         "sameAs": [
           "https://linkedin.com/in/theopcoder",
           "https://github.com/habeebullahtabrez",
