--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <meta name="twitter:image" content="https://theopcoder.in/images/Mohammed_Habeeb_Ullah_Tabrez.webp">
 
     <!-- Favicon related -->
-    <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <link rel="shortcut icon" href="./favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
+    <link rel="shortcut icon" href="./favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Habeeb Ullah Tabrez" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
     
     <style>
         /* --- General Styles & Resets --- */
