--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 <div class="skill-category">
                     <h3>Databases</h3>
                     <ul>
-                        <li>MongoDB</li><li>SQL Server</li><li>Firebase</li><li>HarperDB</li>
+                        <li>MongoDB</li><li>SQL Server</li><li>Firebase</li><li>HarperDB</li><li>PostgreSQL</li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -698,7 +698,7 @@
                 <div class="skill-category">
                     <h3>Tools</h3>
                     <ul>
-                        <li>VS Code</li><li>Cursor AI</li><li>Postman</li><li>Heroku</li><li>Netlify</li>
+                        <li>VS Code</li><li>Cursor AI</li><li>Postman</li><li>Heroku</li><li>Netlify</li><li>Render</li>
                     </ul>
                 </div>
             </div>
@@ -744,20 +744,32 @@
                 },
                 {
                     name: 'Twitter',
-                    url: 'https://twitter.com/yourprofile', // Replace with your Twitter URL
+                    url: 'https://x.com/TheOpCoder',
                     icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>`
-                }
-                // Add more social links here
+                },
+                // Youtube
+                {
+                    name: 'YouTube',
+                    url: 'https://www.youtube.com/@TheOpCoder',
+                    icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2A29 29 0 0 0 23 11.75a29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>`
+                },
             ];
 
             // 2. Projects Configuration
             const projects = [
                 {
+                    title: 'WinningSon-inator',
+                    description: 'A web app where users can log their daily wins and create a knowledge base of their contributions over time. Also helps them setup goals and analyze their progress using AI.',
+                    tech: ['Go', 'React.js', 'PostgreSQL'],
+                    githubUrl: null, // Optional
+                    demoUrl: 'https://www.winningsoninator.com' // Optional: Replace with live demo URL
+                },
+                {
                     title: 'E-Commerce Store',
                     description: 'An e-commerce platform built from the ground up, featuring user authentication, product listings, and a complete shopping cart flow.',
                     tech: ['Node.js', 'Express.js', 'MongoDB'],
                     githubUrl: 'https://github.com/habeebullahtabrez/e-commerce', // Optional
-                    demoUrl: '#' // Optional: Replace with live demo URL
+                    demoUrl: null // Optional: Replace with live demo URL
                 },
                 {
                     title: 'Chatrooms App',
@@ -771,7 +783,7 @@
                     description: 'An event management application that allows users to create, publish, and manage online events, using a real-time database for live updates.',
                     tech: ['JavaScript', 'Svelte.js', 'Firebase'],
                     githubUrl: 'https://github.com/habeebullahtabrez/meetup-organizer', // Optional
-                    demoUrl: '#' // Optional: Replace with live demo URL
+                    demoUrl: null // Optional: Replace with live demo URL
                 },
                 {
                     title: 'Wave Portal (dApp)',
