--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
                     <h1 class="name">Mohammed Habeeb Ullah Tabrez.</h1>
                     <h1 class="subtitle">I build things for the web.</h1>
                     <p class="summary">
-                        I'm a Backend Developer with 2+ years of experience building scalable web apps, RESTful APIs, and microservices using Node.js, Express, and.NET. I'm passionate about using AI tools to boost productivity and solve complex backend challenges.
+                        I'm a Backend Developer with 2+ years of experience building scalable web apps, RESTful APIs, and microservices using Node.js, Express, and .NET. I'm passionate about using AI tools to boost productivity and solve complex backend challenges.
                     </p>
+                    <div class="hero-cta">
+                        <a href="#contact" class="cta-button primary">Get In Touch</a>
+                        <a href="#projects" class="cta-button secondary">View My Work</a>
+                    </div>
                 </div>
                 <div class="hero-image-container">
                     <!-- SEO: Use descriptive alt text and replace placeholder with a real image. -->
